--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "version": "15.5.1",
   "main": "index.js",
   "scripts": {
+    "start": "heroku open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
